<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_addFrag"
        android:icon="@drawable/add"
        android:title="@string/new_menu_item" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/search"
        android:title="@string/search_menu_item" />

    <item android:title="@string/options_menu">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_file_menu_item" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings_menu_item" />
        </menu>
    </item>

</menu>
